--- a/src/components/MoviesCards.css
+++ b/src/components/MoviesCards.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     padding: 2rem 1rem;
     width: 100%;
+    height:75%;
     display: flex;
     flex-direction: row;
     justify-content: center;
